<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/InNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/INombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/InTelefono"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IFecha"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="61dp" />

        <EditText
            android:id="@+id/editTextFecha"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/Oprimir"
            android:inputType="textPersonName"
            android:text=""
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="73dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/InTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/ITelefono"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/InEmail"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/InEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/IEmail"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Desc"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/Desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/IDescripcion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InEmail" />

    <Button
        android:id="@+id/Bsiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="Siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/Bsiguiente"
        app:layout_constraintEnd_toEndOf="parent">

    </android.support.design.widget.TextInputLayout>


</android.support.constraint.ConstraintLayout>


